# mdbook-gitbook

./: .gitbook.yaml  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  book.toml  index.html  print.html  random.html  searchindex.js  searchindex.json
.github/workflows/: build.yml  deploy-gh-pages.yml  release-crate.yml  release-please.yml  test.yml
assets/: content-refs-template.html  style.css  youtube-embed-template.html
assets/templates/: hints.html
assets/templates/embeds/: generic.html
docs/src/: README.md  SUMMARY.md  random.md
docs/src/examples/: content-refs.md  embeds.md  hints.md
examples/: content-refs.html  embeds.html  hints.html
src/: content_refs.rs  embeds.rs  hints.rs  lib.rs  main.rs
src/embeds/: extract.rs  mod.rs
