[package]
name = "mdbook-gitbook"
version = "1.0.0"
authors = ["GeckoEidechse"]
edition = "2021"

description = "mdBook preprocessor to properly render GitBook specific syntax"
repository = "https://github.com/GeckoEidechse/mdbook-gitbook"
license = "MPL-2.0"
readme = "README.md"
keywords = [ "mdbook", "preprocessor", "markdown", "gitbook" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
mdbook = "0.4.36"
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["blocking"] }
rust-embed = "8.2.0"
scraper = "0.18"
semver = "1.0.21"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
url = "2.5"
