[package]
name = "mdbook-gitbook"
version = "1.0.3"
authors = ["GeckoEidechse"]
edition = "2021"

description = "mdBook preprocessor to properly render GitBook specific syntax"
repository = "https://github.com/GeckoEidechse/mdbook-gitbook"
license = "MPL-2.0"
readme = "README.md"
keywords = [ "mdbook", "preprocessor", "markdown", "gitbook" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
mdbook = "0.4.37"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["blocking"] }
rust-embed = "8.3.0"
scraper = "0.19"
semver = "1.0.22"
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0.116"
url = "2.5"
